--- a/Scripts/CCG-Core.asmdef
+++ b/Scripts/CCG-Core.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "CCG-Core",
+    "rootNamespace": "",
     "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:3aab6fac66d7eb74bb5cf5a1657b7950"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
