--- a/Scripts/CcgCore.asmdef
+++ b/Scripts/CcgCore.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "CCG-Core",
-    "rootNamespace": "",
+    "name": "BumpySellotape.CcgCore",
+    "rootNamespace": "BumpySellotape.CcgCore",
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:3aab6fac66d7eb74bb5cf5a1657b7950"
