--- a/Scripts/CcgCore.asmdef
+++ b/Scripts/CcgCore.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "BumpySellotape.CcgCore",
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:3aab6fac66d7eb74bb5cf5a1657b7950"
+        "GUID:3aab6fac66d7eb74bb5cf5a1657b7950",
+        "GUID:5cd64b5cb23ac5c48b6cc31f8a91055e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
